--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   { "sentence": "おかしを全部食べてしまった。＿＿＿、みんなが怒るということだ。", "options": ["つまり", "けれども", "たとえば"], "answer": "つまり" },
 
   { "sentence": "まだなれていない。＿＿＿、れんしゅうがひつようです。", "options": ["ようするに", "でも", "たとえば"], "answer": "ようするに" },
-  { "sentence": "いつもねぼうします。＿＿＿、ちこくします。", "options": ["ようするに", "しかし", "さて"], "answer": "ようするに" },
+  { "sentence": "いつもねぼうしてしまいます。＿＿＿、毎日ちこくです。", "options": ["ようするに", "しかし", "さて"], "answer": "ようするに" },
   { "sentence": "テスト前に何もしていない。＿＿＿、じゅんびぶそくだ。", "options": ["ようするに", "しかし", "だから"], "answer": "ようするに" },
 
   { "sentence": "雨の日のじゅんびをしましょう。＿＿＿、かさ、長ぐつ、カッパなどです。", "options": ["たとえば", "しかし", "それでも"], "answer": "たとえば" },
