--- a/index.html
+++ b/index.html
@@ -14,35 +14,35 @@
       touch-action: manipulation;
     }
     #question {
-      font-size: 2em;
-      margin: 20px;
-      padding: 0 10px;
-    }
+  font-size: 2.5em;
+  margin: 30px 10px 10px;
+  padding: 0 10px;
+  line-height: 1.5;}
     #doors {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 20px;
-      flex-wrap: wrap;
-      position: relative;
-      padding: 10px;
-    }
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  flex-wrap: wrap;
+  padding: 10px 20px;
+}
     .option-button {
-      width: 120px;
-      height: 160px;
-      font-size: 1.3em;
-      writing-mode: vertical-rl;
-      background-color: sienna;
-      color: #fff9c4;
-      border: 3px solid #333;
-      border-radius: 10px;
-      box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);
-      cursor: pointer;
-      position: relative;
-      transition: transform 0.6s ease-in-out;
-      transform-style: preserve-3d;
-      touch-action: manipulation;
-    }
+  width: 150px;
+  height: 200px;
+  font-size: 1.6em;
+  writing-mode: vertical-rl;
+  background-color: sienna;
+  color: #fff9c4;
+  border: 3px solid #333;
+  border-radius: 12px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+  position: relative;
+  transition: transform 0.4s ease-in-out;
+  transform-style: preserve-3d;
+  margin: 10px;
+  touch-action: manipulation;
+}
+
     .option-button.opened {
       animation: doorOpen 0.6s forwards;
     }
@@ -70,8 +70,8 @@
       pointer-events: none;
     }
     .option-button:hover {
-      transform: rotateY(10deg);
-    }
+  transform: none; /* hoverによる回転を無効化してタブレットでの誤反応防止 */
+}
     .feedback {
       font-size: 2em;
       margin-top: 20px;
