--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <title>ことばのトビラ</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
+    @keyframes pop {
+  0% { transform: scale(0.8); opacity: 0; }
+  50% { transform: scale(1.2); opacity: 1; }
+  100% { transform: scale(1); }
+}
+
+@keyframes fadein {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
     body {
       font-family: "BIZ UDゴシック", "Yu Gothic", "Hiragino Kaku Gothic ProN", sans-serif;
       text-align: center;
@@ -110,8 +121,8 @@
   { "sentence": "雨がふりました。＿＿＿、うんどう会はちゅうしになりました。", "options": ["それで", "それとも", "たとえば"], "answer": "それで" },
 
   { "sentence": "雨がふっています。＿＿＿、うんどう会はちゅうしになりました。", "options": ["そのため", "だけど", "たとえば"], "answer": "そのため" },
-  { "sentence": "ドアをしめました。＿＿＿、へやがしずかになりました。", "options": ["そのため", "けれども", "つまり"], "answer": "そのため" },
-  { "sentence": "お金を使いすぎました。＿＿＿、貯金がへりました。", "options": ["そのため", "でも", "そして"], "answer": "そのため" },
+  { "sentence": "ドアをしめました。＿＿＿、へやがしずかになりました。", "options": ["そのため", "けれども", "それとも"], "answer": "そのため" },
+  { "sentence": "お金を使いすぎました。＿＿＿、貯金がへりました。", "options": ["そのため", "でも", "さて"], "answer": "そのため" },
 
   { "sentence": "町に車や工場がふえました。＿＿＿、町の空気がよごれてきました。", "options": ["このようなことから", "そして", "けれども"], "answer": "このようなことから" },
   { "sentence": "彼はすぐに怒るうえに、わがままだ。＿＿＿、みんなは彼をジャイアンのようだと言っている。", "options": ["このようなことから", "しかし", "なぜかというと"], "answer": "このようなことから" },
@@ -142,11 +153,11 @@
   { "sentence": "お金を使いすぎました。＿＿＿、貯金がへりました。", "options": ["そのため", "でも", "そして"], "answer": "そのため" },
 
   { "sentence": "がんばって走りました。＿＿＿、ビリでした。", "options": ["しかし", "だから", "または"], "answer": "しかし" },
-  { "sentence": "勉強したのに、テストの点がよくなかった。＿＿＿、もっとがんばります。", "options": ["しかし", "それで", "それとも"], "answer": "しかし" },
+  { "sentence": "いっしょうけんめい勉強をした。＿＿＿、100点がとれなかった。", "options": ["しかし", "それで", "それとも"], "answer": "しかし" },
   { "sentence": "友だちをさそいました。＿＿＿、来ませんでした。", "options": ["しかし", "だから", "さて"], "answer": "しかし" },
 
   { "sentence": "雨がふっていました。＿＿＿、かれは外であそびました。", "options": ["それでも", "それに", "だから"], "answer": "それでも" },
-  { "sentence": "おこられると思いました。＿＿＿、先生はにこにこしていました。", "options": ["それでも", "けれども", "そして"], "answer": "それでも" },
+  { "sentence": "おこられると思いました。＿＿＿、先生はにこにこしていました。", "options": ["それでも", "だから", "そして"], "answer": "それでも" },
   { "sentence": "ねつがありました。＿＿＿、学校に来ました。", "options": ["それでも", "たとえば", "だから"], "answer": "それでも" },
 
   { "sentence": "とてもつかれていました。＿＿＿、ちゃんとやりました。", "options": ["でも", "だから", "そして"], "answer": "でも" },
@@ -211,7 +222,7 @@
 
   { "sentence": "映画はおもしろかったね。＿＿＿、宿題はもう終わったかな。", "options": ["ところで", "つまり", "でも"], "answer": "ところで" },
   { "sentence": "料理がとくいなんだ。＿＿＿、きみの好きなことってなに。", "options": ["ところで", "または", "だから"], "answer": "ところで" },
-  { "sentence": "テストはむずかしかったね。＿＿＿、次のテストはいつですか。", "options": ["ところで", "そして", "それとも"], "answer": "ところで" },
+  { "sentence": "テストはむずかしかったね。＿＿＿、次のテストはいつですか。", "options": ["ところで", "だけど", "それとも"], "answer": "ところで" },
 
 
 ];
@@ -232,12 +243,17 @@
     const quizData = shuffle([...fullQuizData]).slice(0, 10);
     let current = 0;
     let correctCount = 0;
+    let solveTimes = []; 
+    let playerAnswers = [];
     const questionBox = document.getElementById("question");
     const doorsBox = document.getElementById("doors");
     const feedbackBox = document.getElementById("feedback");
-    const resultBox = document.getElementById("result");
+    const resultBox = document.getElementById("result");   
+    let startTime;           
+
 
     function loadQuestion() {
+      startTime = Date.now();
       const quiz = quizData[current];
       questionBox.textContent = `(${current + 1}/${quizData.length}) ${quiz.sentence}`;
       doorsBox.innerHTML = "";
@@ -261,11 +277,22 @@
     function choose(button, selected, correct) {
       const isCorrect = selected === correct;
       if (isCorrect) correctCount++;
+      playerAnswers.push({
+  sentence: quizData[current].sentence,
+  selected: selected,
+  correct: correct,
+  isCorrect: isCorrect
+});
+
 
       const buttons = document.querySelectorAll(".option-button");
       buttons.forEach(btn => btn.disabled = true);
 
       button.classList.add("opened");
+       const endTime = performance.now();
+       const timeTaken = (endTime - startTime) / 1000; // 秒に変換
+       solveTimes.push(timeTaken);
+
       button.addEventListener("animationend", () => {
         const mark = document.createElement("div");
         mark.textContent = isCorrect ? "○" : "×";
@@ -287,10 +314,9 @@
                 frame.className = "correct-frame";
                 frame.style.width = btn.offsetWidth + "px";
                 frame.style.height = btn.offsetHeight + "px";
-                const btnRect = btn.getBoundingClientRect();
-                const containerRect = doorsBox.getBoundingClientRect();
-                frame.style.left = (btnRect.left - containerRect.left) + "px";
-                frame.style.top = (btnRect.top - containerRect.top) + "px";
+                frame.style.left = btn.offsetLeft + "px";
+frame.style.top = btn.offsetTop + "px";
+
                 doorsBox.appendChild(frame);
               }
             });
@@ -304,16 +330,128 @@
       current++;
       if (current < quizData.length) {
         loadQuestion();
-      } else {
-        questionBox.textContent = "";
-        doorsBox.innerHTML = "";
-        feedbackBox.textContent = "";
-        resultBox.innerHTML = `おしまい！<br>正解数：${correctCount} / ${quizData.length}`;
-        resultBox.style.display = "block";
-      }
-    }
+      } 
+      else {
+  questionBox.textContent = "";
+  doorsBox.innerHTML = "";
+  feedbackBox.textContent = "";
 
-    window.onload = loadQuestion;
-  </script>
+  let message = "";
+if (correctCount >= 9) {
+  message = "🌟すばらしい！ことば名人！🌟";
+  resultBox.style.color = "gold";
+  resultBox.style.fontSize = "2.5em";
+  resultBox.style.animation = "pop 1s ease";
+  document.body.style.backgroundColor = "#fffbe7";
+} else if (correctCount >= 6) {
+  message = "😊よくできました！😊";
+  resultBox.style.color = "dodgerblue";
+  resultBox.style.fontSize = "2.2em";
+  resultBox.style.animation = "fadein 1s ease";
+  document.body.style.backgroundColor = "#eef";
+} else if (correctCount >= 3) {
+  message = "😌もうすこし！がんばろう";
+  resultBox.style.color = "gray";
+  resultBox.style.fontSize = "2em";
+  resultBox.style.animation = "fadein 1s ease";
+  document.body.style.backgroundColor = "#eef";
+} else {
+  message = "💡つぎはもっとできるよ！";
+  resultBox.style.color = "darkgray";
+  resultBox.style.fontSize = "1.8em";
+  resultBox.style.animation = "fadein 1s ease";
+  document.body.style.backgroundColor = "#eef";
+}
+
+resultBox.innerHTML = `
+  おしまい！<br>
+  正解数：${correctCount} / ${quizData.length}<br><br>
+  ${message}<br><br>
+  <button id="retryButton" style="
+    margin-top: 10px;
+    padding: 8px 16px;
+    font-size: 1em;
+    cursor: pointer;
+    border-radius: 6px;
+    border: 1px solid #999;
+    background-color: white;
+  ">もういちど遊ぶ</button>
+`;
+resultBox.style.display = "block";
+
+document.getElementById("retryButton").onclick = () => {
+  current = 0;
+  correctCount = 0;
+  playerAnswers = [];
+  quizData.splice(0, quizData.length, ...shuffle([...fullQuizData]).slice(0, 10));
+
+  resultBox.innerHTML = "";
+  resultBox.style.display = "none";
+  document.body.style.backgroundColor = "#eef";
+
+  loadQuestion();
+};
+
+  const table = document.createElement("table");
+  table.style.margin = "20px auto";
+  table.style.borderCollapse = "collapse";
+  table.style.width = "90%";
+  table.style.maxWidth = "800px";
+  table.style.fontSize = "1em";
+  const header = document.createElement("tr");
+  ["No", "問題文", "あなたの答え", "正解", "○×"].forEach(text => {
+    const th = document.createElement("th");
+    th.textContent = text;
+    th.style.border = "1px solid #999";
+    th.style.padding = "8px";
+    th.style.background = "#f0f0f0";
+    header.appendChild(th);
+  });
+  table.appendChild(header);
+
+  playerAnswers.forEach((item, index) => {
+    const row = document.createElement("tr");
+
+    const cells = [
+      index + 1,
+      item.sentence.replace("＿＿＿", "____"),
+      item.selected,
+      item.correct,
+      item.isCorrect ? "⭕" : "❌"
+    ];
+
+    cells.forEach(text => {
+      const td = document.createElement("td");
+      td.textContent = text;
+      td.style.border = "1px solid #999";
+      td.style.padding = "6px";
+      td.style.textAlign = "center";
+      row.appendChild(td);
+    
+    });
+
+  table.appendChild(row);
+  });
+
+      resultBox.appendChild(table);
+
+   // 🔒 隠しエンディングの判定（全問正解＆全問4秒以内）
+   const allCorrect = correctCount === quizData.length;
+   const allQuick = solveTimes.every(t => t <= 4);
+
+   if (allCorrect && allQuick) {
+  resultBox.insertAdjacentHTML("afterbegin", `
+    <div style="color: mediumvioletred; font-size: 1.4em; margin-bottom: 10px;">
+      🎉🎉 かくしエンディング 🎉🎉<br>
+      あなたは ことばマスター！すごすぎる！
+    </div>
+  `);
+  resultBox.style.animation = "glow 1.5s infinite alternate";
+}
+
+  } // ← nextStep() の閉じカッコ
+    }
+  window.onload = loadQuestion;
+</script>
 </body>
 </html>
