--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
   { "sentence": "友だちは来ませんでした。＿＿＿、びょうきだったからです。", "options": ["なぜかというと", "それに", "でも"], "answer": "なぜかというと" },
 
   { "sentence": "みんな来ました。＿＿＿、はじめましょう。", "options": ["では", "それに", "けれども"], "answer": "では" },
-  { "sentence": "プリントが終わりましたね。＿＿＿、つぎにドリルをしましょう。", "options": ["では", "けれども", "それで"], "answer": "では" },
+  { "sentence": "プリントが終わりましたね。＿＿＿、つぎにドリルをしましょう。", "options": ["では", "けれども", "たとえば"], "answer": "では" },
   { "sentence": "チャイムが鳴りました。＿＿＿、教室にもどりましょう。", "options": ["では", "だけど", "しかも"], "answer": "では" },
 
   { "sentence": "このはなしはここまでです。＿＿＿、つぎのはなしをしましょう。", "options": ["さて", "また", "ようするに"], "answer": "さて" },
