--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   { "sentence": "Aクラスにしますか？＿＿＿Bクラスにしますか？", "options": ["それとも", "しかも", "でも"], "answer": "それとも" },
 
   { "sentence": "ばんごはんはお肉かな。＿＿＿、魚かな。", "options": ["あるいは", "しかも", "たとえば"], "answer": "あるいは" },
-  { "sentence": "テレビを見ます。＿＿＿、ゲームもします。", "options": ["あるいは", "それに", "または"], "answer": "あるいは" },
+  { "sentence": "テレビを見ます。＿＿＿、ゲームもします。", "options": ["あるいは", "このようなことから", "つまり"], "answer": "あるいは" },
   { "sentence": "電車で行く？＿＿＿、バスで行く？", "options": ["あるいは", "そして", "このようなことから"], "answer": "あるいは" },
 
   { "sentence": "おやつはおまんじゅうですか。＿＿＿アイスですか。", "options": ["または", "だから", "それで"], "answer": "または" },
