--- a/index.html
+++ b/index.html
@@ -118,73 +118,73 @@
 
   { "sentence": "朝に運動をはじめました。＿＿＿、けんこうになりました。", "options": ["それで", "しかし", "または"], "answer": "それで" },
   { "sentence": "道にまよいました。＿＿＿、人に道をたずねました。", "options": ["それで", "でも", "つまり"], "answer": "それで" },
-  { "sentence": "雨がふりました。＿＿＿、うんどう会はちゅうしになりました。", "options": ["それで", "それとも", "たとえば"], "answer": "それで" },
+  { "sentence": "雨がふりました。＿＿＿、運動会は中止になりました。", "options": ["それで", "それとも", "たとえば"], "answer": "それで" },
 
-  { "sentence": "雨がふっています。＿＿＿、うんどう会はちゅうしになりました。", "options": ["そのため", "だけど", "たとえば"], "answer": "そのため" },
+  { "sentence": "雨がふっています。＿＿＿、お花見会は中止になりました。", "options": ["そのため", "だけど", "たとえば"], "answer": "そのため" },
   { "sentence": "ドアをしめました。＿＿＿、へやがしずかになりました。", "options": ["そのため", "けれども", "それとも"], "answer": "そのため" },
-  { "sentence": "お金を使いすぎました。＿＿＿、貯金がへりました。", "options": ["そのため", "でも", "さて"], "answer": "そのため" },
+  { "sentence": "お金を使いすぎました。＿＿＿、ちょ金がへりました。", "options": ["そのため", "でも", "さて"], "answer": "そのため" },
 
-  { "sentence": "町に車や工場がふえました。＿＿＿、町の空気がよごれてきました。", "options": ["このようなことから", "そして", "けれども"], "answer": "このようなことから" },
+  { "sentence": "町に車や工場がふえました。＿＿＿、町の空気がよごれたのだと思います。", "options": ["このようなことから", "そして", "けれども"], "answer": "このようなことから" },
   { "sentence": "彼はすぐに怒るうえに、わがままだ。＿＿＿、みんなは彼をジャイアンのようだと言っている。", "options": ["このようなことから", "しかし", "なぜかというと"], "answer": "このようなことから" },
-  { "sentence": "毎日ネコカフェに行ったり、町のネコの写真をとる。＿＿＿、ネコ好きだといえる。", "options": ["このようなことから", "たとえば", "でも"], "answer": "このようなことから" },
+  { "sentence": "毎日ねこカフェに行き、町のねこの写真をとる。＿＿＿、ねこ好きだといえる。", "options": ["このようなことから", "たとえば", "でも"], "answer": "このようなことから" },
 
   { "sentence": "がんばって走りました。＿＿＿、ビリでした。", "options": ["しかし", "だから", "または"], "answer": "しかし" },
-  { "sentence": "本気でわざを出した。＿＿＿、まったくきいていない。", "options": ["しかし", "それで", "それとも"], "answer": "しかし" },
+  { "sentence": "本気でこうげきをした。＿＿＿、まったくきいていない。", "options": ["しかし", "それで", "それとも"], "answer": "しかし" },
   { "sentence": "友だちをさそいました。＿＿＿、来ませんでした。", "options": ["しかし", "だから", "さて"], "answer": "しかし" },
 
   { "sentence": "雨がふっていました。＿＿＿、かれは外であそびました。", "options": ["それでも", "それに", "だから"], "answer": "それでも" },
-  { "sentence": "道にまよったので地図を見た。＿＿＿、まったく分からない。", "options": ["それでも", "けれども", "そして"], "answer": "それでも" },
+  { "sentence": "道にまよったので地図を見た。＿＿＿、まったく分からない。", "options": ["それでも", "または", "そして"], "answer": "それでも" },
   { "sentence": "ねつがありました。＿＿＿、学校に来ました。", "options": ["それでも", "たとえば", "だから"], "answer": "それでも" },
 
-  { "sentence": "とてもつかれていました。＿＿＿、ちゃんとやりました。", "options": ["でも", "だから", "そして"], "answer": "でも" },
+  { "sentence": "とてもつかれていました。＿＿＿、がんばりました。", "options": ["でも", "だから", "そして"], "answer": "でも" },
   { "sentence": "遊びたかった。＿＿＿、今日はがまんしました。", "options": ["でも", "それで", "しかも"], "answer": "でも" },
-  { "sentence": "こわかった。＿＿＿、行ってみました。", "options": ["でも", "だから", "ようするに"], "answer": "でも" },
+  { "sentence": "こわくて行きたくなかった。＿＿＿、行きました。", "options": ["でも", "だから", "ようするに"], "answer": "でも" },
 
   { "sentence": "公園に行きたかったです。＿＿＿、行けませんでした。", "options": ["けれども", "そして", "だから"], "answer": "けれども" },
-  { "sentence": "このゲームはむずかしい。＿＿＿、とてもおもしろい。", "options": ["けれども", "だから", "さて"], "answer": "けれども" },
+  { "sentence": "このゲームはむずかしい。＿＿＿、とてもおもしろい。", "options": ["けれども", "または", "さて"], "answer": "けれども" },
   { "sentence": "がんばりました。＿＿＿、うまくできませんでした。", "options": ["けれども", "それとも", "または"], "answer": "けれども" },
 
-  { "sentence": "友だちとけんかした。＿＿＿、きょうは一日かなしかった。", "options": ["それで", "しかし", "または"], "answer": "それで" },
+  { "sentence": "友だちとけんかした。＿＿＿、今日はずっと悲しかった。", "options": ["それで", "しかし", "または"], "answer": "それで" },
   { "sentence": "道にまよいました。＿＿＿、人にたずねました。", "options": ["それで", "でも", "つまり"], "answer": "それで" },
-  { "sentence": "雨がふりました。＿＿＿、うんどう会はちゅうしになりました。", "options": ["それで", "それとも", "たとえば"], "answer": "それで" },
+  { "sentence": "わたしは薬を飲んだ。＿＿＿、ねつが下がりました。", "options": ["それで", "それとも", "たとえば"], "answer": "それで" },
 
-  { "sentence": "雨がふっています。＿＿＿、うんどう会はちゅうしになりました。", "options": ["そのため", "だけど", "たとえば"], "answer": "そのため" },
+  { "sentence": "きのうはねむれなかった。＿＿＿、今日はとてもねむいです。", "options": ["そのため", "だけど", "たとえば"], "answer": "そのため" },
   { "sentence": "ドアをしめました。＿＿＿、へやがしずかになりました。", "options": ["そのため", "けれども", "つまり"], "answer": "そのため" },
   { "sentence": "お金を使いすぎました。＿＿＿、貯金がへりました。", "options": ["そのため", "でも", "そして"], "answer": "そのため" },
 
   { "sentence": "がんばって走りました。＿＿＿、ビリでした。", "options": ["しかし", "だから", "または"], "answer": "しかし" },
-  { "sentence": "いっしょうけんめい勉強をした。＿＿＿、100点がとれなかった。", "options": ["しかし", "それで", "それとも"], "answer": "しかし" },
+  { "sentence": "いっしょうけんめい勉強をした。＿＿＿、よい点はとれなかった。", "options": ["しかし", "それで", "それとも"], "answer": "しかし" },
   { "sentence": "友だちをさそいました。＿＿＿、来ませんでした。", "options": ["しかし", "だから", "さて"], "answer": "しかし" },
 
   { "sentence": "雨がふっていました。＿＿＿、かれは外であそびました。", "options": ["それでも", "それに", "だから"], "answer": "それでも" },
-  { "sentence": "おこられると思いました。＿＿＿、先生はにこにこしていました。", "options": ["それでも", "だから", "そして"], "answer": "それでも" },
-  { "sentence": "ねつがありました。＿＿＿、学校に来ました。", "options": ["それでも", "たとえば", "だから"], "answer": "それでも" },
+  { "sentence": "おこられると思いました。＿＿＿、先生はにこにこしていました。", "options": ["それでも", "だから", "あるいは"], "answer": "それでも" },
+  { "sentence": "友だちがやくそくをやぶった。＿＿＿、ぼくは友だちをゆるした。", "options": ["それでも", "たとえば", "だから"], "answer": "それでも" },
 
-  { "sentence": "とてもつかれていました。＿＿＿、ちゃんとやりました。", "options": ["でも", "だから", "そして"], "answer": "でも" },
+  { "sentence": "とてもつかれていました。＿＿＿、がんばりました。", "options": ["でも", "だから", "そして"], "answer": "でも" },
   { "sentence": "遊びたかった。＿＿＿、今日はがまんしました。", "options": ["でも", "それで", "しかも"], "answer": "でも" },
-  { "sentence": "こわかった。＿＿＿、行ってみました。", "options": ["でも", "だから", "ようするに"], "answer": "でも" },
+  { "sentence": "お化けやしきはきらいだ。＿＿＿、入ってみました。", "options": ["でも", "だから", "ようするに"], "answer": "でも" },
 
   { "sentence": "公園に行きたかったです。＿＿＿、行けませんでした。", "options": ["けれども", "そして", "だから"], "answer": "けれども" },
-  { "sentence": "手伝いたい。＿＿＿、今日はやくそくがあります。", "options": ["けれども", "だから", "さて"], "answer": "けれども" },
+  { "sentence": "手伝いたいです。＿＿＿、今日はやくそくがあります。", "options": ["けれども", "だから", "さて"], "answer": "けれども" },
   { "sentence": "がんばりました。＿＿＿、うまくできませんでした。", "options": ["けれども", "それとも", "または"], "answer": "けれども" },
 
   { "sentence": "かれはサッカーが上手です。＿＿＿、テニスも上手です。", "options": ["しかも", "けれども", "たとえば"], "answer": "しかも" },
-  { "sentence": "このふくはやすいです。＿＿＿、じょうぶです。", "options": ["しかも", "でも", "そのため"], "answer": "しかも" },
-  { "sentence": "この本はかんたんです。＿＿＿、おもしろいです。", "options": ["しかも", "ようするに", "それとも"], "answer": "しかも" },
+  { "sentence": "この服は安いです。＿＿＿、とてもじょうぶです。", "options": ["しかも", "だから", "そのため"], "answer": "しかも" },
+  { "sentence": "先生は英語を話すことができる。＿＿＿、ドイツ語も少し話せる。", "options": ["しかも", "ようするに", "それとも"], "answer": "しかも" },
 
   { "sentence": "りんごを食べました。＿＿＿、バナナも食べました。", "options": ["また", "しかし", "だから"], "answer": "また" },
-  { "sentence": "えをかきました。＿＿＿、うたも歌いました。", "options": ["また", "けれども", "そのため"], "answer": "また" },
-  { "sentence": "はをみがきました。＿＿＿、かおもあらいました。", "options": ["また", "でも", "さて"], "answer": "また" },
+  { "sentence": "絵をかきました。＿＿＿、うたも歌いました。", "options": ["また", "けれども", "そのため"], "answer": "また" },
+  { "sentence": "歯をみがきました。＿＿＿、顔もあらいました。", "options": ["また", "でも", "さて"], "answer": "また" },
 
   { "sentence": "朝は7時に起きました。＿＿＿、ごはんをたべました。", "options": ["そして", "それとも", "つまり"], "answer": "そして" },
   { "sentence": "せんたくをしました。＿＿＿、そうじもしました。", "options": ["そして", "たとえば", "しかし"], "answer": "そして" },
-  { "sentence": "手をあらいました。＿＿＿、しょくじをしました。", "options": ["そして", "けれども", "なぜかというと"], "answer": "そして" },
+  { "sentence": "手をあらいました。＿＿＿、食事をしました。", "options": ["そして", "けれども", "なぜかというと"], "answer": "そして" },
 
   { "sentence": "おかしをもらいました。＿＿＿、ジュースももらいました。", "options": ["それに", "でも", "さて"], "answer": "それに" },
-  { "sentence": "この道はひろいです。＿＿＿、新しいです。", "options": ["それに", "しかし", "または"], "answer": "それに" },
+  { "sentence": "この道は広いです。＿＿＿、新しいです。", "options": ["それに", "しかし", "それとも"], "answer": "それに" },
   { "sentence": "その先生はやさしいです。＿＿＿、わかりやすいです。", "options": ["それに", "けれども", "つまり"], "answer": "それに" },
   
-  { "sentence": "ジュースにしますか？＿＿＿、おちゃにしますか？", "options": ["それとも", "また", "そして"], "answer": "それとも" },
+  { "sentence": "ジュースにしますか？＿＿＿、おちゃにしますか？", "options": ["それとも", "ようするに", "そして"], "answer": "それとも" },
   { "sentence": "おちゃにしますか？＿＿＿コーヒーにしますか？", "options": ["それとも", "だから", "たとえば"], "answer": "それとも" },
   { "sentence": "Aクラスにしますか？＿＿＿Bクラスにしますか？", "options": ["それとも", "しかも", "でも"], "answer": "それとも" },
 
@@ -196,19 +196,19 @@
   { "sentence": "買ってくるのはバナナですか。＿＿＿リンゴですか。", "options": ["または", "けれども", "さて"], "answer": "または" },
   { "sentence": "えんぴつで書いてください。＿＿＿ボールペンで書いても良いです。", "options": ["または", "でも", "だから"], "answer": "または" },
 
-  { "sentence": "このケーキは小麦もたまごも入っていない。＿＿＿、アレルギーのある人も食べられる。", "options": ["つまり", "しかし", "だから"], "answer": "つまり" },
+  { "sentence": "宿題は全ておわっている。＿＿＿、今日は遊ぶことができるということだ。", "options": ["つまり", "しかし", "それとも"], "answer": "つまり" },
   { "sentence": "あの二人はまだ口をきかない。＿＿＿、まだ仲直りをしていないということだ。。", "options": ["つまり", "けれども", "さて"], "answer": "つまり" },
-  { "sentence": "おかしを全部食べてしまった。＿＿＿、みんなが怒るということだ。", "options": ["つまり", "けれども", "たとえば"], "answer": "つまり" },
+  { "sentence": "お母さんの花びんを割ってしまった。＿＿＿、お母さんが怒るということだ。", "options": ["つまり", "けれども", "たとえば"], "answer": "つまり" },
 
-  { "sentence": "まだなれていない。＿＿＿、れんしゅうがひつようです。", "options": ["ようするに", "でも", "たとえば"], "answer": "ようするに" },
+  { "sentence": "きのうも、今日も上手くできなかった。＿＿＿、れんしゅうがひつようです。", "options": ["ようするに", "でも", "たとえば"], "answer": "ようするに" },
   { "sentence": "いつもねぼうしてしまいます。＿＿＿、毎日ちこくです。", "options": ["ようするに", "しかし", "さて"], "answer": "ようするに" },
-  { "sentence": "テスト前に何もしていない。＿＿＿、じゅんびぶそくだ。", "options": ["ようするに", "しかし", "だから"], "answer": "ようするに" },
+  { "sentence": "テスト前に何もしていない。＿＿＿、100点は取れないということだ。", "options": ["ようするに", "しかし", "だから"], "answer": "ようするに" },
 
   { "sentence": "雨の日のじゅんびをしましょう。＿＿＿、かさ、長ぐつ、カッパなどです。", "options": ["たとえば", "しかし", "それでも"], "answer": "たとえば" },
   { "sentence": "いろいろなくだものがあります。＿＿＿、リンゴやバナナなどです。", "options": ["たとえば", "だから", "それに"], "answer": "たとえば" },
   { "sentence": "王様とよばれる動物がいます。＿＿＿、ライオンです。", "options": ["たとえば", "けれども", "それで"], "answer": "たとえば" },
 
-  { "sentence": "今日は学校をやすみました。＿＿＿、びょうきでした。", "options": ["なぜかというと", "だから", "さて"], "answer": "なぜかというと" },
+  { "sentence": "今日は学校をやすみました。＿＿＿、病気だったからです。", "options": ["なぜかというと", "だから", "さて"], "answer": "なぜかというと" },
   { "sentence": "犬が好きです。＿＿＿、かわいくて、なついてくれるからです。。", "options": ["なぜかというと", "しかも", "さて"], "answer": "なぜかというと" },
   { "sentence": "友だちは来ませんでした。＿＿＿、びょうきだったからです。", "options": ["なぜかというと", "それに", "でも"], "answer": "なぜかというと" },
 
@@ -216,9 +216,9 @@
   { "sentence": "プリントが終わりましたね。＿＿＿、つぎにドリルをしましょう。", "options": ["では", "けれども", "たとえば"], "answer": "では" },
   { "sentence": "チャイムが鳴りました。＿＿＿、教室にもどりましょう。", "options": ["では", "だけど", "しかも"], "answer": "では" },
 
-  { "sentence": "このはなしはここまでです。＿＿＿、つぎのはなしをしましょう。", "options": ["さて", "また", "ようするに"], "answer": "さて" },
+  { "sentence": "この話はここまでです。＿＿＿、次の話をしましょう。", "options": ["さて", "また", "ようするに"], "answer": "さて" },
   { "sentence": "今日はかけ算について学習しました。＿＿＿、しつもんはありますか？", "options": ["さて", "または", "そのため"], "answer": "さて" },
-  { "sentence": "みなさん、きょうもよくできました。＿＿＿、この問題はとけますか？", "options": ["さて", "なぜかというと", "でも"], "answer": "さて" },
+  { "sentence": "みなさん、今日もよくできました。＿＿＿、この問題はとけますか？", "options": ["さて", "なぜかというと", "あるいは"], "answer": "さて" },
 
   { "sentence": "映画はおもしろかったね。＿＿＿、宿題はもう終わったかな。", "options": ["ところで", "つまり", "でも"], "answer": "ところで" },
   { "sentence": "料理がとくいなんだ。＿＿＿、きみの好きなことってなに。", "options": ["ところで", "または", "だから"], "answer": "ところで" },
@@ -338,48 +338,152 @@ button.addEventListener("animationend", () => {
   doorsBox.innerHTML = "";
   feedbackBox.textContent = "";
 
+  const totalTime = ((Date.now() - quizStartTime) / 1000).toFixed(1); // 1桁小数で表示
+
   let message = "";
-if (correctCount >= 9) {
-  message = "🌟すばらしい！ことば名人！🌟";
-  resultBox.style.color = "gold";
-  resultBox.style.fontSize = "2.5em";
-  resultBox.style.animation = "pop 1s ease";
-  document.body.style.backgroundColor = "#fffbe7";
-} else if (correctCount >= 6) {
-  message = "😊よくできました！😊";
-  resultBox.style.color = "dodgerblue";
-  resultBox.style.fontSize = "2.2em";
-  resultBox.style.animation = "fadein 1s ease";
-  document.body.style.backgroundColor = "#eef";
-} else if (correctCount >= 3) {
-  message = "😌もうすこし！がんばろう";
-  resultBox.style.color = "gray";
-  resultBox.style.fontSize = "2em";
-  resultBox.style.animation = "fadein 1s ease";
-  document.body.style.backgroundColor = "#eef";
-} else {
-  message = "💡つぎはもっとできるよ！";
-  resultBox.style.color = "darkgray";
-  resultBox.style.fontSize = "1.8em";
-  resultBox.style.animation = "fadein 1s ease";
-  document.body.style.backgroundColor = "#eef";
+  if (correctCount >= 9) {
+    message = "🌟すばらしい！ことば名人！🌟";
+    resultBox.style.color = "gold";
+    resultBox.style.fontSize = "2.5em";
+    resultBox.style.animation = "pop 1s ease";
+    document.body.style.backgroundColor = "#fffbe7";
+  } else if (correctCount >= 6) {
+    message = "😊よくできました！😊";
+    resultBox.style.color = "dodgerblue";
+    resultBox.style.fontSize = "2.2em";
+    resultBox.style.animation = "fadein 1s ease";
+    document.body.style.backgroundColor = "#eef";
+  } else if (correctCount >= 3) {
+    message = "😌もうすこし！がんばろう";
+    resultBox.style.color = "gray";
+    resultBox.style.fontSize = "2em";
+    resultBox.style.animation = "fadein 1s ease";
+    document.body.style.backgroundColor = "#eef";
+  } else {
+    message = "💡つぎはもっとできるよ！";
+    resultBox.style.color = "darkgray";
+    resultBox.style.fontSize = "1.8em";
+    resultBox.style.animation = "fadein 1s ease";
+    document.body.style.backgroundColor = "#eef";
+  }
+
+  resultBox.innerHTML = `
+    おしまい！<br>
+    正解数：${correctCount} / ${quizData.length}<br>
+    かかった時間：${totalTime} 秒<br><br>
+    ${message}<br><br>
+    <button id="retryButton" style="
+      margin-top: 10px;
+      padding: 8px 16px;
+      font-size: 1em;
+      cursor: pointer;
+      border-radius: 6px;
+      border: 1px solid #999;
+      background-color: white;
+    ">もういちど遊ぶ</button>
+  `;
+  resultBox.style.display = "block";
+  if (correctCount === quizData.length && totalTime <= 60) {
+    const secretBtn = document.createElement("button");
+    secretBtn.textContent = "✨かくしエンディング✨";
+    secretBtn.style.marginTop = "20px";
+    secretBtn.style.padding = "10px 20px";
+    secretBtn.style.fontSize = "1.1em";
+    secretBtn.style.borderRadius = "10px";
+    secretBtn.style.border = "2px solid gold";
+    secretBtn.style.backgroundColor = "#fff";
+    secretBtn.style.color = "gold";
+    secretBtn.style.cursor = "pointer";
+    secretBtn.onclick = () => showSecretEnding();
+    resultBox.appendChild(secretBtn);
+  }
+
+  // ↓↓↓ 秘密エンディングの関数
+  function showSecretEnding() {
+  document.body.style.backgroundColor = "black";
+  document.body.innerHTML = `
+    <canvas id="fireworksCanvas" width="800" height="600" style="position: fixed; top: 0; left: 0; z-index: 0;"></canvas>
+    <div style="
+      color: gold;
+      font-size: 2.5em;
+      font-weight: bold;
+      text-align: center;
+      margin-top: 20vh;
+      z-index: 10;
+      position: relative;
+      animation: pop 2s ease-in-out;
+    ">
+      🌟ことばの天才、ここにたんじょう！🌟<br><br>
+      <span style="font-size: 0.7em; color: white;">（60秒以内＆全問正解おめでとう）</span><br><br>
+      <button onclick="location.reload()" style="
+        padding: 10px 20px;
+        font-size: 1em;
+        margin-top: 30px;
+        border-radius: 8px;
+        border: none;
+        background-color: white;
+        color: black;
+        cursor: pointer;
+      ">もう一度あそぶ</button>
+    </div>
+  `;
+
+  // 花火アニメーション
+  const canvas = document.getElementById("fireworksCanvas");
+  const ctx = canvas.getContext("2d");
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+
+  let fireworks = [];
+
+  function launchFirework() {
+    const x = Math.random() * canvas.width;
+    const y = Math.random() * canvas.height / 2;
+    const particles = [];
+    const colors = ["red", "yellow", "blue", "lime", "magenta", "orange", "white"];
+    const color = colors[Math.floor(Math.random() * colors.length)];
+
+    for (let i = 0; i < 50; i++) {
+      particles.push({
+        x: x,
+        y: y,
+        dx: Math.cos(i * Math.PI * 2 / 50) * (Math.random() * 3 + 2),
+        dy: Math.sin(i * Math.PI * 2 / 50) * (Math.random() * 3 + 2),
+        alpha: 1,
+        color: color
+      });
+    }
+
+    fireworks.push(particles);
+  }
+
+  function animateFireworks() {
+    requestAnimationFrame(animateFireworks);
+    ctx.fillStyle = "rgba(0, 0, 0, 0.2)";
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+    fireworks.forEach((particles, index) => {
+      particles.forEach(p => {
+        p.x += p.dx;
+        p.y += p.dy;
+        p.alpha -= 0.01;
+        ctx.fillStyle = `rgba(${p.color === "white" ? "255,255,255" : p.color},${p.alpha})`;
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, 2, 0, Math.PI * 2);
+        ctx.fill();
+      });
+
+      // 消えた花火は削除
+      fireworks[index] = particles.filter(p => p.alpha > 0);
+    });
+
+    fireworks = fireworks.filter(p => p.length > 0);
+  }
+
+  setInterval(launchFirework, 600); // 定期的に打ち上げ
+  animateFireworks();
 }
 
-resultBox.innerHTML = `
-  おしまい！<br>
-  正解数：${correctCount} / ${quizData.length}<br><br>
-  ${message}<br><br>
-  <button id="retryButton" style="
-    margin-top: 10px;
-    padding: 8px 16px;
-    font-size: 1em;
-    cursor: pointer;
-    border-radius: 6px;
-    border: 1px solid #999;
-    background-color: white;
-  ">もういちど遊ぶ</button>
-`;
-resultBox.style.display = "block";
 
 document.getElementById("retryButton").onclick = () => {
   current = 0;
