--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   { "sentence": "せんたくをしました。＿＿＿、そうじもしました。", "options": ["そして", "たとえば", "しかし"], "answer": "そして" },
   { "sentence": "手をあらいました。＿＿＿、食事をしました。", "options": ["そして", "けれども", "なぜかというと"], "answer": "そして" },
 
-  { "sentence": "おかしをもらいました。＿＿＿、ジュースももらいました。", "options": ["それに", "でも", "さて"], "answer": "それに" },
+  { "sentence": "おかしをもらいました。＿＿＿、ジュースももらいました。", "options": ["それに", "だから", "さて"], "answer": "それに" },
   { "sentence": "この道は広いです。＿＿＿、新しいです。", "options": ["それに", "しかし", "それとも"], "answer": "それに" },
   { "sentence": "その先生はやさしいです。＿＿＿、わかりやすいです。", "options": ["それに", "けれども", "つまり"], "answer": "それに" },
   
